syntax = "proto3";
package grpcUserServer;

option go_package = "github.com/GurbanowGadam/grpcUserServer";

service userServerService {
    rpc GetProfileData(GetProfileDataRequest) returns (GetProfileDataResponse);
    rpc GetBlockedLists(GetBlockedListsRequest) returns (GetBlockedListsResponse);
    rpc GetUsers(GetUsersRequest) returns (GetUsersResponse);
}

message GetProfileDataRequest {
    string UserID = 1;
}

message GetProfileDataResponse {
    string UserID = 1;
    string FullName = 2;
    string AvatarName = 3;
    string Type = 4;
}


message GetBlockedListsRequest {
    string UserID = 1;
}

message GetBlockedListsResponse {
    string UserID = 1;
    string FullName = 2;
}

//-----------------------------------
message GetUsersRequest {
  string LastUser = 1;
}

message GetUsersResponse {
  repeated GetUserResponse Users = 1;
}

message GetUserResponse {
    string UserID = 1;
    string FullName = 2;
}
